--- a/src/components/Root/Root.css
+++ b/src/components/Root/Root.css
@@ -5,3 +5,8 @@
     rgba(152, 115, 255, 0.05) 100%
   );
 }
+
+.linear {
+  color: white;
+  background: var(--Linear, linear-gradient(90deg, #7e90fe 0%, #9873ff 100%));
+}
